# str-freertos

./: CMakeLists.txt  README.md  example.c
TraceRecorder/config/: trcConfig.h  trcKernelPortConfig.h  trcStreamPortConfig.h
include/: FreeRTOSConfig.h  neopixel.c  ssd1306_font.h  ssd1306_i2c.c
src/: main.c
streamports/USART/: Readme-Streamport.txt:Zone.Identifier
